Fixes and Improvements (#8)
* Fixed Most Mobile Layout Issues

* Fixed Menu Bar on Mobile

* Fixxes And Alteraations

* Updated Readme

* Fixed Link

* Updated Website Post to reflect changes

* Added Resume, removed references to tutorials

* Final Mobile Fixes

* Fixed mobile issues and Sharp image optimization
Fixed a vulknerable package also

* Fixed Spacing and Added download link for Resume

* Fixed Titles andSite Icon

* Fixed Date On Website

---------

--- a/pages/topbar.css
+++ b/pages/topbar.css
@@ -1,5 +1,5 @@
 .topnav{
-    width: 100vw;
+    width: calc(100vw - (100vw - 100%));
     height: 35px;
     background-color: lightsteelblue;
     text-align: center;
